fixed sizing for project images(width) on small displays and fixed dark mode toggle not showing

--- a/portfolio.css
+++ b/portfolio.css
@@ -173,3 +173,15 @@
 .sample-slider {
   margin: 0;
 }
+
+@media (max-width: 700px) {
+  .swipe-img {
+    width: 300px;
+    text-align: center;
+    margin: 20px auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
